--- a/app/MemberModule/components/MembersListControl.latte
+++ b/app/MemberModule/components/MembersListControl.latte
@@ -1,9 +1,10 @@
 <div class="list_component">
-<h3>{if $isOrg} Organizátoři <span class="icon icon-user-o"></span>{else}Účastníci <span class="icon icon-user"></span>{/if}</h3>
+<h3>{if $org} Organizátoři <span class="icon icon-user-o"></span>{else}Účastníci <span class="icon icon-user"></span>{/if}</h3>
 {snippet memberList}
 
 <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
 
+{if $user->isInRole('member')}
 {if $akce->date_start > date_create()}
 {if $isAllowLogin}
 	{if !$isLogged}
@@ -19,21 +20,24 @@
 	{/if}
 {/if}
 {/if}
+{/if}
 
 <ol n:if="$members" class="member_list">
-{foreach $members as $id => $jmeno}
-    <li>        
-        <a n:if="$isAllow" class="icon-cancel char red ajax" n:href="unlog!, $id" title="Odhlásit člena"></a>      
-        {$iterator->getCounter()}.        
-        <a n:class="$id == $user->getId() ? logged" href="{plink Member:view, $id}">{$jmeno}</a>
+{foreach $members as $member}
+    <li>
+		{*<a n:if="(($userIsOrg)and($user->isInRole('member')))or($user->isInRole('admin'))" class="icon-cancel char red ajax" n:href="unlog!, $member->id" title="Odhlásit člena"></a>*}
+        {*{$iterator->getCounter()}.*}
+        <a n:tag-if="($member->role)or($user->isInRole('board'))" n:class="$member->id == $user->id ? logged" href="{plink Member:view, $member->id}">{$member->surname} {$member->name}</a>
     </li>    
 {/foreach}
 </ol>
 
-{if $isAllow}
-{form logginForm}
-<p>{label member /} {input member} {input send}</p>
-{/form}
+{if $user->isInRole('member')and(($userIsOrg)or($user->isInRole('admin')))}
+<a id="change-{$org|number}-button" href="javascript:unfold('change-{$org|number}')" class="buttonLike"><span class="icon-pencil"> upravit</a>
+<div id="change-{$org|number}-form" class="hide">
+	<p>{control logginForm}</p>
+	<p>{control unLogginForm}</p>
+</div>
 {/if}
 
 {/snippet}
