--- a/app/MemberModule/components/PostsListControl.latte
+++ b/app/MemberModule/components/PostsListControl.latte
@@ -3,7 +3,7 @@
 <div id="posts" n:inner-foreach="$posts as $post">
     <div id="post/{$post->id}" n:class="post, target, ($post->date_add > $user->getIdentity()->date_last) ? 'new', ($user->id == $post->member_id) ? logged">
         <div class="top headerLike">
-            <a class="float-right" href="{plink Forum:post, $post->id}" title="{$post->date_add|timeAgoInWords}">
+            <a class="float-right" href="{plink Forum:post $post->id}" title="{$post->date_add|timeAgoInWords}">
                 <span class="icon-chat"></span> {$post->date_add|date:'%d.%m.%Y %H:%M'}
             </a>
             <a href="{plink Member:view,$post->member_id}" title="profil uživatele">
@@ -20,21 +20,18 @@
 
         {var $isTopic = ($post->id == $post->forum_topic_id)}
         {var $isUpdated = ($post->date_add != $post->date_update)}
-        {var $isAllow = (($user->id == $post->member_id) or ($user->isInRole('Member:Forum')))}
+        {var $isAllow = (($user->id == $post->member_id) or ($user->isInRole('admin')))}
 
-        <div class="bottom" n:if="(!$isLocked)or($isLocked and $isUpdated)">
-            <div n:if="$isUpdated" n:class="update, (($isTopic and ($post->member_id == $user->id)) or !$isLocked) ? float-left" title="{$post->date_update|timeAgoInWords}">
-                Upraveno {$post->date_update|date:'%d.%m.%Y %H:%M'}
-            </div>
-
-            <div class="right" n:if="!$isLocked or $isTopic">
+        <div class="bottom" {*n:if="(!$isLocked)or($isLocked and $isUpdated)"*}>
+            {*<div n:if="$isUpdated" n:class="update, (($isTopic and ($post->member_id == $user->id)) or !$isLocked) ? float-left" title="{$post->date_update|timeAgoInWords}">*}
+            <div class="buttons float-right" n:if="(!$isLocked or $isTopic)and($user->isInRole('member'))">
             {if $isTopic and $isAllow}
                 {if $isLocked}
-                    <a class="buttonLike" href="{plink Forum:lockTopic,$post->id,0}">
+                    <a class="buttonLike" href="{plink Forum:lockTopic $post->id,0}">
                         <span class="icon-lock-open-alt"></span> odemknout
                     </a>
                 {else}
-                    <a class="buttonLike" href="{plink Forum:lockTopic,$post->id,1}">
+                    <a class="buttonLike" href="{plink Forum:lockTopic $post->id,1}">
                         <span class="icon-lock"></span> zamknout
                     </a>
                 {/if}
@@ -42,12 +39,18 @@
 
             {if !$isLocked}
                 {if $isAllow}
-                    <a class="buttonLike confirm" data-query="Opravdu chete příspěvek smazat?" href="{plink Forum:delete,$post->id}"><span class="icon-trash"></span> smazat</a>
-                    <a class="buttonLike" href="{plink Forum:edit,$post->id}"><span class="icon-pencil"></span> editovat</a>
+                    <a class="buttonLike confirm" data-query="Opravdu chete příspěvek smazat?" href="{plink Forum:delete $post->id}"><span class="icon-trash"></span> smazat</a>
+                    <a class="buttonLike" href="{plink Forum:edit $post->id}"><span class="icon-pencil"></span> editovat</a>
                 {/if}
-                <a class="buttonLike" href="{plink Forum:cite,$post->id}"><span class="icon-quote-left"></span> citace</a>
+                <a class="buttonLike" href="{plink Forum:cite $post->id}"><span class="icon-quote-left"></span> citace</a>
             {/if}
             </div>
-        </div>
-    </div>
- </div>
+
+			<div n:if="$isUpdated" class="update" title="{$post->date_update|timeAgoInWords}">
+				Upraveno {$post->date_update|date:'%d.%m.%Y %H:%M'}
+			</div>
+
+		</div>
+		<div class="clearfix"></div>
+	</div>
+</div>
