--- a/app/MemberModule/templates/Hlasovani.view.latte
+++ b/app/MemberModule/templates/Hlasovani.view.latte
@@ -21,7 +21,7 @@
 
 {block #content}
 
-<ul class="menu_right" n:if="($user->id == $anketa->member_id) or ($user->isInRole($presenter->name))">
+<ul class="menu_right" n:if="($user->id == $anketa->member_id) or ($user->isInRole('admin'))">
 	<li><a n:href="edit,$anketa->id" class="buttonLike">
 		<span class="icon-pencil"></span> editovat</a>
 	</li>
