--- a/app/MemberModule/templates/Member.edit.latte
+++ b/app/MemberModule/templates/Member.edit.latte
@@ -24,7 +24,7 @@
       	elem.setAttribute('type', 'date');
 
       	if ( elem.type === 'text' ) {
-			$("#frm-memberForm-date_born").datepicker();
+			$('.date').datepicker();
 		}
 	});
 </script>
