--- a/app/MemberModule/templates/Member.view.latte
+++ b/app/MemberModule/templates/Member.view.latte
@@ -1,17 +1,19 @@
 {block #head}
-<style type="text/css" n:syntax="off">
-	#photo { margin-right: 1em; margin-bottom: 1em;}
-	.out { margin-left: 1em;}
-	#member { width: 75%;}
-</style>
+	<style type="text/css" n:syntax="off">
+		#photo { margin-right: 1em; margin-bottom: 1em;}
+		.out { margin-left: 1em;}
+		#member { width: 75%;}
+	</style>
+	<script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
 {/block}
 
 <h1 n:block="#title">Osobní profil</h1>
 
 {block #content}
 <ul class="buttonMenu">
-	<li><a n:if="$user->isInRole($presenter->name) or $member->id == $user->getId()" class="buttonLike" n:href="edit,$member->id"><span class="icon-pencil"></span> editovat</a></li>
-	<li><a n:if="$user->isInRole($presenter->name)" class="buttonLike" n:href="delete,$member->id"><span class="icon-trash"></span> smazat</a></li>
+	<li><a n:if="$user->isInRole('admin') or $member->id == $user->getId()" class="buttonLike" n:href="edit,$member->id"><span class="icon-pencil"></span> editovat</a></li>
+	<li><a n:if="($user->isInRole('board'))and($member->role)" class="buttonLike confirm" data-query="Opravdu chcete tohoto člena smazat? Tento krok může vrátit jen admin." n:href="delete,$member->id"><span class="icon-trash"></span> smazat</a></li>
+	<li><a n:if="($user->isInRole('admin'))and(!$member->role)" class="buttonLike confirm" data-query="Opravdu chcete tohoto uživatele aktivovat?" n:href="activate,$member->id"><span class="icon-ok"></span> aktivovat</a></li>
 </ul>
 
 <div n:if="$fileExists" class="float-left" id="photo"><img src="{$basePath}/img/portrets/{$member->id}.jpg" alt="fotografie"></div>
@@ -22,9 +24,18 @@
 
 <div id="member" class="float-left">
 
-<p><b>Osobní číslo:</b> {$member->id}</p>
-<p><b>Věk:</b> {$narozeni->format('%y')}</p>
-<p><b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
+	<p><b>Osobní číslo:</b> {$member->id}</p>
+	{if $user->isInRole('board')}
+		<p><b>Datum narození:</b> {$member->date_born|date:'d.m.Y'} ({$narozeni->format('%y')} let)</p>
+		<ul>
+			<li><b>Datum registrace:</b> <span title="{$member->date_add|timeAgoInWords}">{$member->date_add|date:'d.m.Y'}</span></li>
+			<li><b>Datum úpravy:</b> <span title="{$member->date_update|timeAgoInWords}">{$member->date_update|date:'d.m.Y'}</span></li>
+		</ul>
+	{else}
+		<p><b>Věk:</b> {$narozeni->format('%y')}</p>
+	{/if}
+
+	<p><b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
 
 <h3>Adresa:</h3>
 <address class="out">
@@ -34,11 +45,13 @@
 
 <h3>Kontakty:</h3>
 
-<p class="out"><b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></p>
-<p class="out"><b>Telefon:</b> {$member->telefon|number:0:'.':' '}</p>
+	<ul>
+		<li><b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></li>
+		<li><b>Telefon:</b> {$member->telefon|number:0:'.':' '}</li>
+	</ul>
 
 <div id="poznamka">
-	{$member->text|noescape|texy}
+{$member->text|noescape|texy}
 </div>
 
 </div>
