--- a/www/subdom/member/css/forum.posts.css
+++ b/www/subdom/member/css/forum.posts.css
@@ -3,15 +3,16 @@
 .inline-nav {list-style-type: none; padding: 0; margin-bottom: 1ex;}
 .inline-nav li {display: inline; font-size: inherit;}
 
-#posts .post {margin-bottom: 1em; border: 1px solid gray; border-radius: 1ex;}
+#posts .post {margin-bottom: 1em; padding-bottom: 1ex; border: 1px solid gray; border-radius: 1ex;}
 
 #posts .top {padding: 1ex 1em; border-radius: 1ex 1ex 0 0; font-size: 1em; font-weight: normal;}
 #posts .bottom {padding: 0 1ex 0.5ex 1em; border-radius: 0 0 1ex 1ex;}
 #posts .message {padding: 0 1em; font-size: 90%}
-
 #posts .update {text-align: left;}
 
 .message blockquote {margin: 0 1em 0 1em; border-left: 2px solid #0089d2; background-color: #e6f3f7; padding-left: 15px;}
 .message h1 {font-size: 16px;}
 .message h2 {font-size: 14px;}
 .message h3 {font-size: 12px;}
+
+#posts .clearfix {clear: right;}
