--- a/app/MemberModule/templates/Forum.edit.latte
+++ b/app/MemberModule/templates/Forum.edit.latte
@@ -16,6 +16,8 @@
 
 {control texylaJs}
 
+<script src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
+
 <script type="text/javascript">
 //<![CDATA[
 $.texyla.setDefaults({
@@ -24,6 +26,7 @@ $.texyla.setDefaults({
 });
 
 $(function () {
+	$('.texyla').textareaAutoSize();
 	$('.texyla').texyla(forum);
 });
 //]]>
