Add texarea autosize plugin to more pages (add topic, add post, add/edit event)

--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -18,12 +18,16 @@
 {control texylaJs}
 
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/akce.js"></script>
 
 <script type="text/javascript">
 	$.texyla.setDefaults({
 		baseDir: {$basePath}+'/texyla',
 		previewPath: {link texyPreview, TRUE}
+	});
+	$(function () {
+		$('#frm-akceForm-description').textareaAutoSize();
 	});
 </script>
 
