--- a/app/MemberModule/templates/Forum.category.latte
+++ b/app/MemberModule/templates/Forum.category.latte
@@ -9,6 +9,8 @@
 
 {control texylaJs}
 
+<script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
+
 <script type="text/javascript">
 //<![CDATA[
 $.texyla.setDefaults({
@@ -17,6 +19,7 @@ $.texyla.setDefaults({
 });
 
 $(function () {
+	$('.texyla').textareaAutoSize();
 	$('.texyla').texyla(forum);
 });
 //]]>
