Only member can see adress of different user

--- a/app/MemberModule/templates/Member.view.latte
+++ b/app/MemberModule/templates/Member.view.latte
@@ -28,8 +28,8 @@
 	{if $user->isInRole('board')}
 		<p><b>Datum narození:</b> {$member->date_born|date:'d.m.Y'} ({$narozeni->format('%y')} let)</p>
 		<ul>
-			<li><b>Datum registrace:</b> <span title="{$member->date_add|timeAgoInWords}">{$member->date_add|date:'d.m.Y'}</span></li>
-			<li><b>Datum úpravy:</b> <span title="{$member->date_update|timeAgoInWords}">{$member->date_update|date:'d.m.Y'}</span></li>
+			<li n:if="$member->date_add"><b>Datum registrace:</b> <span title="{$member->date_add|timeAgoInWords}">{$member->date_add|date:'d.m.Y'}</span></li>
+			<li n:if="$member->date_update"><b>Datum úpravy:</b> <span title="{$member->date_update|timeAgoInWords}">{$member->date_update|date:'d.m.Y'}</span></li>
 		</ul>
 	{else}
 		<p><b>Věk:</b> {$narozeni->format('%y')}</p>
@@ -37,14 +37,15 @@
 
 	<p><b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
 
+{if $user->isInRole('member')}
 <h3>Adresa:</h3>
 <address class="out">
 	{$member->ulice}<br>
 	{$member->mesto}
 </address>
+{/if}
 
 <h3>Kontakty:</h3>
-
 	<ul>
 		<li n:if="$member->mail"><b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></li>
 		<li n:if="$member->telefon"><b>Telefon:</b> {$member->telefon|number:0:'.':' '}</li>
