--- a/app/MemberModule/templates/Sign.@layout.latte
+++ b/app/MemberModule/templates/Sign.@layout.latte
@@ -11,12 +11,12 @@
   <script src="{$basePath}/js/jquery.nette.js" type="text/javascript"></script>
   <script src="{$basePath}/js/netteForms.js" type="text/javascript"></script>
   <style type="text/css" media="screen" n:syntax="off">
-  <!--
-  table { margin: 0px auto; text-align: left; }
-  #hlavni { max-width: 30em; margin: 0px auto; text-align: center; }
-  #nahore { height: 95px; margin: 1em auto 1em auto; padding: 0px 4em; overflow: hidden; }
-  //-->
-  </style>
+    <!--
+    table { margin: 0 auto; text-align: left; }
+    #hlavni { max-width: 30em; margin: 0 auto; text-align: center; }
+    #nahore { height: 95px; margin: 1em auto 1em auto; padding: 0 4em; overflow: hidden; }
+    //-->
+    </style>
   {block #head}{/block}
   </head>    
   <body>   
